--- a/Lesson11/Home(Grid)/index.html
+++ b/Lesson11/Home(Grid)/index.html
@@ -7,6 +7,38 @@
   <title>Grid</title>
 </head>
 <body>
-  
+    <div class="gallery">
+    <div class="image1">
+      <img src="./images/img1.jpg" alt="">
+    </div>
+
+    <div class="image2">
+      <img src="./images/img2.jpg" alt="">
+    </div>
+
+    <div class="image3">
+      <img src="./images/img3.jpg" alt="">
+    </div>
+
+    <div class="image4">
+      <img src="./images/img4.webp" alt="">
+    </div>
+
+    <!-- <div class="image5">
+      <img src="./images/img5.jpg" alt="">
+    </div> -->
+
+    <!-- <div class="image6">
+      <img src="./images/img6.jpg" alt="">
+    </div> -->
+
+    <!-- <div class="image7">
+      <img src="./images/img7.jpg" alt="">
+    </div> -->
+
+    <!-- <div class="image8">
+      <img src="./images/img8.jpg" alt="">
+    </div> -->
+  </div>
 </body>
 </html>
