button element added

--- a/Lesson4/Home/index.html
+++ b/Lesson4/Home/index.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Lesson 4 - Home Task</title>
-</head>
-<body>
-  <section class="blogs-container">
-    <div class="blog-card">
-      <img src="./images/blog1.png">
-      <div class="blog-card-content">
-      <span class="tag tag-blue">Technology</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Lesson 4 - Home Task</title>
+  </head>
+  <body>
+    <button>click</button>
 
-      <h2>Lorem ipsum </h2>
+    <section class="blogs-container">
+      <div class="blog-card">
+        <img src="./images/blog1.png" />
+        <div class="blog-card-content">
+          <span class="tag tag-blue">Technology</span>
 
-      <p>Lorem ipsum dolor sit amet consectetur.</p>
+          <h2>Lorem ipsum</h2>
 
-      <div class="blog-card-bottom">
-        <img src="./images/avatar1.png">
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
 
-        <div>
-        <h5>John Doe</h5>
-        <span>2h ago</span>
+          <div class="blog-card-bottom">
+            <img src="./images/avatar1.png" />
+
+            <div>
+              <h5>John Doe</h5>
+              <span>2h ago</span>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  </div>
 
-    <div class="blog-card">
-      <img src="./images/blog2.png">
+      <div class="blog-card">
+        <img src="./images/blog2.png" />
 
-      <div class="blog-card-content">
-      <span class="tag tag-orange">Food</span>
+        <div class="blog-card-content">
+          <span class="tag tag-orange">Food</span>
 
-      <h2>Lorem ipsum.</h2>
+          <h2>Lorem ipsum.</h2>
 
-      <p>Lorem ipsum dolor sit amet consectetur</p>
+          <p>Lorem ipsum dolor sit amet consectetur</p>
 
-      <div class="blog-card-bottom">
-        <img src="./images/avatar2.png">
+          <div class="blog-card-bottom">
+            <img src="./images/avatar2.png" />
 
-        <div>
-        <h5>John Doe</h5>
-        <span>2h ago</span>
+            <div>
+              <h5>John Doe</h5>
+              <span>2h ago</span>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    </div>
-  </div>
 
-    <div class="blog-card">
-      <img src="./images/blog3.png">
+      <div class="blog-card">
+        <img src="./images/blog3.png" />
 
-      <div class="blog-card-content">
-      <span class="tag tag-red">Automobile</span>
+        <div class="blog-card-content">
+          <span class="tag tag-red">Automobile</span>
 
-      <h2>Lorem ipsum</h2>
+          <h2>Lorem ipsum</h2>
 
-      <p>Lorem ipsum dolor sit amet consectetur</p>
+          <p>Lorem ipsum dolor sit amet consectetur</p>
 
-      <div class="blog-card-bottom">
-        <img src="./images/avatar3.png">
+          <div class="blog-card-bottom">
+            <img src="./images/avatar3.png" />
 
-        <div>
-        <h5>John Doe</h5>
-        <span>2h ago</span>
+            <div>
+              <h5>John Doe</h5>
+              <span>2h ago</span>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    </div>
-  </div>    
-  </section>
-</body>
+    </section>
+  </body>
 </html>
